# api/routes/openapi/openapi.json
@@ -3333,6 +3333,62 @@
         }
       }
     },
+    "/rest/tourns/{tournId}/entries/{entryId}/records": {
+      "get": {
+        "summary": "Get Tournament Records for a given Entry",
+        "description": "Shows the published available results data for a given entry",
+        "tags": [
+          "Tournaments",
+          "Entries",
+          "Results"
+        ],
+        "parameters": [
+          {
+            "name": "tournId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "ID of the tournament"
+          },
+          {
+            "name": "entryId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "ID of the entry"
+          },
+          {
+            "$ref": "#/components/parameters/tournId"
+          },
+          {
+            "name": "entryId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Record of results of a given entry"
+          },
+          "401": {
+            "$ref": "#/components/responses/Unauthorized"
+          },
+          "404": {
+            "$ref": "#/components/responses/NotFound"
+          },
+          "500": {
+            "$ref": "#/components/responses/ErrorResponse"
+          }
+        }
+      }
+    },
     "/rest/tourns/{tournId}/invite": {
       "get": {
         "summary": "Get Tournament Invite",
